# zhold

./: Cargo.toml
assets/static/: index.html
assets/static/assets/components/: zhold-character-editor.js
assets/static/js/: index.mjs
assets/templates/: config.toml  index.html
assets/templates/views/: pinyin_input.html
src/: main.rs
src/routes/: mod.rs  pinyin_input.rs
